@@ -1,5 +1,5 @@
 name="lacaml"
-version="4.6.4"
+version="4.6.5"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
